--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
-<h1>Pages#home</h1>
+
+<div class="container">
+<h1>My Page</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-
 <%= link_to "About Me", about_path %>
+
+</div>
